☕Fixing width overflow

--- a/components/home/index.module.scss
+++ b/components/home/index.module.scss
@@ -1,16 +1,16 @@
 .root {
-  @apply w-screen h-screen relative z-40;
+  @apply w-full h-screen relative z-40;
 }
 
 .slide {
-  @apply w-screen h-screen; 
+  @apply w-full h-screen; 
 }
 .slide1 {
-  @apply w-screen h-screen; 
+  @apply w-full h-screen; 
 }
 .slide2 {
-  @apply w-screen h-screen; 
+  @apply w-full h-screen; 
 }
 .slide3 {
-  @apply w-screen h-screen; 
+  @apply w-full h-screen; 
 }
